kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idwall-app-service
  labels:
    app: idwall-app
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: idwall-app
