kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idwall-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: idwall-app.local.com
    http:
      paths:
      - path: /
        backend:
          serviceName: idwall-app-service
          servicePort: 8080
